@@ -1,3 +1,11 @@
+2002-08-18  Havoc Pennington  <hp@pobox.com>
+
+	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
+	both automake 1.6 and 1.4 installed get the right automake. Means
+	compilation from CVS will now require the latest automake 1.4
+	release, or manually creating symlinks called "automake-1.4" and
+	"aclocal-1.4"
+
 2002-08-08  James Henstridge  <james@daa.com.au>
 
 	* gtk-doc.xsl: add a gtkdoc.bookname param, and include it in the
